# shredstream-sdk-python

./: .gitignore  README.md  pyproject.toml
examples/: listen.py
src/shredstream/: __init__.py  accumulator.py  decoder.py  listener.py  parser.py
